fixed styleguide.html and added align=baseline

--- a/src/components/stack.scss
+++ b/src/components/stack.scss
@@ -31,7 +31,6 @@ $sizes: (
   64: 64px,
 );
 
-
 @mixin line {
   flex-direction: row;
   align-items: center;
@@ -63,6 +62,9 @@ $sizes: (
   }
   &--align-stretch {
     align-items: stretch;
+  }
+  &--align-baseline {
+    align-items: baseline;
   }
 
   // justify
@@ -121,6 +123,9 @@ $sizes: (
     &--align-tablet-stretch {
       align-items: stretch;
     }
+    &--align-tablet-baseline {
+      align-items: baseline;
+    }
     &--justify-tablet-start {
       justify-content: flex-start;
     }
@@ -167,6 +172,9 @@ $sizes: (
     &--align-desktop-stretch {
       align-items: stretch;
     }
+    &--align-desktop-baseline {
+      align-items: baseline;
+    }
     &--justify-desktop-start {
       justify-content: flex-start;
     }
@@ -212,6 +220,9 @@ $sizes: (
     }
     &--align-widescreen-stretch {
       align-items: stretch;
+    }
+    &--align-widescreen-baseline {
+      align-items: baseline;
     }
     &--justify-widescreen-start {
       justify-content: flex-start;
